# mcltl-rs

./: Cargo.toml
src/: lib.rs  main.rs  state.rs
src/buchi/: mod.rs  tests.rs
src/ltl/: automata.rs  expression.rs
src/ltl/parser/: lexer.rs  mod.rs  parser.rs
src/utils/: dot.rs  mod.rs
src/verifier/: kripke.rs  mod.rs  model_checker.rs
tests/: verifier.rs
