[package]
name = "mcltl"
version = "0.1.0"
authors = [
    "Alessio Coltellacci <lightplay8@gmail.com>",
    "Oliver Bøving <oliver@bvng.dk>",
]
edition = "2021"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
dot = "0.1"
itertools = "0.12.1"
once_cell = "1.19.0"
plex = "0.3.0"
tracing = "0.1.37"
